resources/gitops-config/operators/argo-cd/templates/argocd-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-httproute
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: svc-gateway
    namespace: kube-system
    sectionName: svc-https-listener
  hostnames:
    - argocd.svc.damman.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: argo-cd-argocd-server
          port: 443
          weight: 1
